--- a/apps/package.json
+++ b/apps/package.json
@@ -46,7 +46,7 @@
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@types/debug": "4.1.5",
     "@types/jest": "^24.0.23",
     "@types/qrcode.react": "^1.0.1",
@@ -58,6 +58,7 @@
     "babel-loader": "8.0.6",
     "brotli-webpack-plugin": "1.1.0",
     "compression-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.7.0",
