--- a/apps/package.json
+++ b/apps/package.json
@@ -17,9 +17,11 @@
     "react-pdf": "^5.7.2"
   },
   "scripts": {
-    "build": "npm run check-types && cross-env NODE_ENV=production webpack --progress --mode production",
+    "build": "npm run check-types && npm run build:css && cross-env NODE_ENV=production webpack --progress --mode production",
+    "build:css": "postcss src/tailwind.css -o src/index.css",
     "check-types": "tsc --sourceMap false --noEmit",
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "dev:css-watch": "chokidar 'src/**/*' --command 'npm run build:css' --ignore src/**/*.css",
     "example:application": "webpack-dev-server --config application/webpack.config.js",
     "integration": "percy exec -- testcafe chrome src/**/*.spec.ts --ts-config-path ./tsconfig.json --app \"npm run dev\"",
     "integration:headless": "percy exec -- testcafe chrome:headless src/**/*.spec.ts --ts-config-path ./tsconfig.json --app \"npm run dev\"",
@@ -44,6 +46,7 @@
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "@testing-library/react": "^9.5.0",
@@ -54,9 +57,11 @@
     "@types/react-pdf": "^5.7.2",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
     "brotli-webpack-plugin": "1.1.0",
+    "chokidar-cli": "^3.0.0",
     "compression-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^6.0.3",
@@ -73,9 +78,12 @@
     "husky": "^8.0.1",
     "jest": "24.9.0",
     "jest-junit": "^13.2.0",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
     "prettier": "^1.19.1",
     "qrcode.react": "^1.0.0",
     "react-docgen-typescript-loader": "^3.4.0",
+    "tailwindcss": "^3.0.24",
     "testcafe": "^1.7.1",
     "typescript": "^4.2.3",
     "webpack": "4.41.2",
